# TN-Clinic-Managerment-AI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_sha.txt
app/: main.py
app/apis/: __init__.py  inferences_routes.py
app/core/: config.py
app/models/: yolo_model.py
app/onnx/: export_onnx_config
app/schemas/: request_response.py
app/services/: inference_service.py  yolo_services.py
app/test/: largest_file.py
app/tests/: test_onnx_class.py  test_onnx_yolo.py
app/utils/: image_processor.py  post_processing.py
