[project]
name = "tn-clinic-managerment-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.235",
    "uvicorn>=0.38.0",
]
